tests/baselines/reference/checkJsxNamespaceNamesQuestionableForms.errors.txt
tests/cases/conformance/jsx/checkJsxNamespaceNamesQuestionableForms.tsx(12,2): error TS2633: JSX property access expressions cannot include JSX namespace names


==== tests/cases/conformance/jsx/checkJsxNamespaceNamesQuestionableForms.tsx (1 errors) ====
    declare namespace JSX {
        interface IntrinsicElements {
            'this:b': any;
            'b:c': {
                x: any
            };
            'a:b': any;
        }
    }
    
    <a:b></a:b>;
    <b:c.x></b:c.x>;
     ~~~
!!! error TS2633: JSX property access expressions cannot include JSX namespace names
    <this:b></this:b>;